@@ -2,6 +2,8 @@ Revision history for Perl extension Wx.
 
 0.9905 TBR
 	- wrapped native wxTreeListCtrl
+	- ShowModal implementation for wxPrintDialog and wxPageSetupDialog
+	  ( thanks to Tomohiro Hosaka )
 
 0.9904 Tue Feb 28 2012
     - Implemented TextCtrlIface for RichTextCtrl in >= 2.9.2
